--- a/home.html
+++ b/home.html
@@ -1,1 +1,68 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="style.css">
+  <title>Khadeejah Asif - Portfolio</title>
+</head>
+<body>
+  <header>
+    <h1>Khadeejah Asif</h1>
+    <p>I am a Web Developer. A passionate student who is currently working to have some experience in web development.
+       I am using HTML & CSS to make this portfolio.   
+    </p>
+  </header>
 
+  <section id="About">
+    <img src="khadeejah.jpeg" alt="Khadeejah Asif">
+    <p>
+        Hi! It's me Khadeejah. I am a student at UCP (University of Central Punjab). My aim is to be a Best Software Engineer. My Future plans is to learn Web development. 
+    </p>
+  </section>
+
+  <section id="Skills">
+    <h2>- Skills -</h2>
+    <ol>
+      <li>HTML5</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>Responsive Design</li>
+      <li>UI/UX Design</li>
+      <li>Mern Stack</li>
+    </ol>                            <!-- tags to list items i can also use tag ul but i'm prefering this one tag in my portfolio -->      
+  </section>
+
+  <section id="Project">
+    <h2>- Projects -</h2>
+    <div class="Project">
+      <img src="First(1).jpg" alt="1">
+      <h3>My First Weather Forecasting Application FrontEnd</h3>
+      <p>
+        
+"Experience the future of weather prediction with our advanced forecasting system. Powered by cutting-edge technology and real-time data analysis, our weather forecasting project provides accurate and up-to-the-minute weather updates. Whether you're planning outdoor activities or making travel decisions, our system equips you with the information you need to stay prepared and stay safe."
+      </p>
+    </div>
+    <div class="Project">
+      <img src="First(1).jpg" alt="2">
+      <h3>Car Rental system FrontEnd</h3>
+      <p>
+        "Introducing our seamless car rental platform, where convenience meets mobility. With a diverse fleet of vehicles and user-friendly booking options, our car rental project empowers travelers to easily find, book, and drive their ideal vehicle for a comfortable journey every time."
+      </p>
+    </div>
+  </section>
+
+  <section id="Resume">
+    <h2>Resume</h2>
+    <p><b>Download my <a href="Resume.pdf" target="_blank" rel="noopener noreferrer">resume</a>.</b></p>
+  </section>
+
+  <section id="Contact">
+    <h2>Contact</h2>
+    <p><b>Email:</b> <i>khadeejaasif323@gmail.com</i> </p>
+    <p><b>Phone:</b> <i>(+92) 3334304342</i></p>
+  </section>
+
+  <footer>
+    <p>&copy;26 July,2023. Khadeejah Asif. All rights reserved.</p>
+  </footer>
+</body>
+</html>
